# pso

./: .gitignore  README.md  pyproject.toml
pso/: __init__.py  pso.py
tests/: test_pso.py
